--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@unocss/reset": "^0.64.1",
     "motion": "^11.11.17",
     "nuxt": "^3.14.1592",
     "vue": "latest",
