--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@directus/sdk": "^18.0.0",
+    "@headlessui/vue": "^1.7.23",
+    "@nuxt/image": "1.8.1",
+    "@nuxt/ui": "^2.19.2",
     "@unocss/reset": "^0.64.1",
     "motion": "^11.11.17",
     "nuxt": "^3.14.1592",
