--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@directus/sdk": "^18.0.0",
     "@headlessui/vue": "^1.7.23",
+    "@nuxt/fonts": "^0.10.2",
     "@nuxt/image": "1.8.1",
     "@nuxt/ui": "^2.19.2",
     "@unocss/reset": "^0.64.1",
